LIS-FTWD-GuilhermeSãoPedro-#156

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,10 +38,10 @@
             </div>
           </nav>
           </div>
-          <h1 class="title"> Your go-to<br> digital agency</h1>
+          <h1 class="title py-5"> Your go-to<br> digital agency</h1>
           <h2 class="subtitle">Significa is a digital design-led agency mainly <br> focused on Product Development</h2>
           <div class="container-fluid"> 
-             <div class="container">
+             <div class="container py-5">
                   <div class="row">
                     <div class="col">
                         <div class="card" style="width: 18rem;">
@@ -73,10 +73,10 @@
                   </div>
                 </div>
               
-                <div class="container">
+                <div class="container py-5">
                   <div class="row">
                     <div class="col">
-                      We build digital <br> products
+                      <h2>We build digital <br> products </h2>
                     </div>
                     <div class="col">
                       Having a design-led approach to what we do defines who<br> 
@@ -85,7 +85,8 @@
                       continuous deployment. 
                     </div>
                   </div>
-
+                </div>
+                <div class="container py-5">
                   <div class="row">
                     <div class="col">
                       <h2> Strategy </h2>
@@ -132,8 +133,9 @@
                     </div>
                   </div>
                 </div>
+                <div class="container" py-5>
                   <div class="row">
-                    <div class="col-8"><h1> What's new on <br> Significa labs</h1></div>
+                    <div class="col-8"><h2> What's new on <br> Significa labs</h2></div>
                     <div class="col-4">
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item">How to automate release logs and builds for your style guides <br>
@@ -144,7 +146,9 @@
                           Article on Medium</li>
                       </ul>
                     </div>
+                    </div>
                   </div>
+                  <div class="container py-5">
                   <div class="row">
                     <div class="col-6">Drop by, <br>
                       we're hiring.</div>
@@ -154,6 +158,7 @@
                        your mind to.
                     </div>
                   </div>
+                </div>
                   <div class="row">
                       <div class="col">
                         <img src="/starter-code/images/4.png">
